--- a/arch/arm64/boot/dts/exynos/exynos9820.dts
+++ b/arch/arm64/boot/dts/exynos/exynos9820.dts
@@ -5218,8 +5218,8 @@
 		#cooling-cells = <0x2>;
 		governor = "interactive";
 		interactive_info = <0x3f7a0 0x5e 0x0>;
-		gpu_dvfs_table_size = <0xa 0x8>;
-		gpu_dvfs_table = <0xc3500 0x4e 0x63 0x7 0x1fefc8 0x0 0x0 0x0 0xab630 0x4e 0x63 0x7 0x1fefc8 0x0 0x0 0x0 0x9eb10 0x4e 0x62 0x5 0x1fefc8 0x0 0x0 0x0 0x8ba60 0x4e 0x62 0x5 0x1b5fd0 0x0 0x0 0x0 0x69b68 0x4e 0x5f 0x1 0x14a140 0x0 0x0 0x0 0x5c0a8 0x4e 0x5a 0x1 0x14a140 0x0 0x0 0x0 0x4f588 0x4e 0x55 0x1 0xf78f0 0x0 0x0 0x0 0x3f7a0 0x4e 0x55 0x1 0xa50a0 0x0 0x0 0x0 0x30d40 0x4e 0x55 0x1 0xa50a0 0x0 0x0 0x0 0x186a0 0x0 0x55 0x1 0xa50a0 0x0 0x0 0x0>;
+		gpu_dvfs_table_size = <0x9 0x8>;
+		gpu_dvfs_table = <0xab630 0x4e 0x64 0x9 0x1fefc8 0x0 0x0 0x0 0x9eb10 0x4e 0x62 0x5 0x1fefc8 0x0 0x0 0x0 0x8ba60 0x4e 0x62 0x5 0x1b5fd0 0x0 0x0 0x0 0x69b68 0x4e 0x5f 0x1 0x14a140 0x0 0x0 0x0 0x5c0a8 0x4e 0x5a 0x1 0x14a140 0x0 0x0 0x0 0x4f588 0x4e 0x55 0x1 0xf78f0 0x0 0x0 0x0 0x3f7a0 0x4e 0x55 0x1 0xa50a0 0x0 0x0 0x0 0x30d40 0x4e 0x55 0x1 0xa50a0 0x0 0x0 0x0 0x186a0 0x0 0x55 0x1 0xa50a0 0x0 0x0 0x0>;
 		gpu_sustainable_info = <0x69b68 0x5f 0xe7b08 0x19c990 0x7ef40>;
 		gpu_pmqos_cpu_cluster_num = <0x3>;
 		gpu_pmu_status_reg_offset = <0x2104>;
@@ -9787,8 +9787,8 @@
 			device_type = "freqvar-tune";
 			shared-cpus = "0-3";
 			boost_table = <0xa0 0xe7b08 0x7b 0x13d620 0x64>;
-			up_rate_limit_table = <0x4>;
-			down_rate_limit_table = <0x4>;
+			// up_rate_limit_table = <0x4>;
+			// down_rate_limit_table = <0x4>;
 			st_table = <0x5>;
 		};
 
@@ -9796,8 +9796,8 @@
 			device_type = "freqvar-tune";
 			shared-cpus = "4-5";
 			boost_table = <0xa0 0xeadd0 0x7b 0x12a570 0x64>;
-			up_rate_limit_table = <0x4>;
-			down_rate_limit_table = <0x4>;
+			// up_rate_limit_table = <0x4>;
+			// down_rate_limit_table = <0x4>;
 			st_table = <0x5>;
 		};
 
@@ -9805,8 +9805,8 @@
 			device_type = "freqvar-tune";
 			shared-cpus = "6-7";
 			boost_table = <0xa0 0xe4840 0x7b 0x1506d0 0x64>;
-			up_rate_limit_table = <0x4>;
-			down_rate_limit_table = <0x4>;
+			// up_rate_limit_table = <0x4>;
+			// down_rate_limit_table = <0x4>;
 			st_table = <0x5>;
 		};
 	};
@@ -9918,7 +9918,7 @@
 			sibling-cpus = "4-5";
 			cal-id = <0xb040003>;
 			dm-type = <0x1>;
-			max-freq = <0x27ac40>;
+			max-freq = <0x249f00>;
 			min-freq = <0x5c0a8>;
 			pm_qos-min-class = <0x5>;
 			pm_qos-max-class = <0x6>;
@@ -9931,13 +9931,13 @@
 				mif-perf {
 					const-type = <0x0>;
 					dm-type = <0x3>;
-					table = <0x27ac40 0x263540 0x249f00 0x1fefc8 0x234f10 0x1fefc8 0x21b8d0 0x0 0x202290 0x0 0x1e8c50 0x0 0x1cf610 0x0 0x1b5fd0 0x0 0x19c990 0x0 0x183350 0x0 0x1702a0 0x0 0x156c60 0x0 0x12a570 0x0 0x104410 0x0 0xeadd0 0x0 0xce4c8 0x0 0xb8150 0x0 0x9eb10 0x0 0x7bc78 0x0 0x5c0a8 0x0>;
+					table = <0x249f00 0x1fefc8 0x234f10 0x1fefc8 0x21b8d0 0x0 0x202290 0x0 0x1e8c50 0x0 0x1cf610 0x0 0x1b5fd0 0x0 0x19c990 0x0 0x183350 0x0 0x1702a0 0x0 0x156c60 0x0 0x12a570 0x0 0x104410 0x0 0xeadd0 0x0 0xce4c8 0x0 0xb8150 0x0 0x9eb10 0x0 0x7bc78 0x0 0x5c0a8 0x0>;
 				};
 
 				ank-perf {
 					const-type = <0x0>;
 					dm-type = <0x0>;
-					table = <0x27ac40 0x263540 0x249f00 0x13d620 0x234f10 0x13d620 0x21b8d0 0x11a788 0x202290 0x11a788 0x1e8c50 0x101148 0x1cf610 0x101148 0x1b5fd0 0xe7b08 0x19c990 0xe7b08 0x183350 0xc4c70 0x1702a0 0xc4c70 0x156c60 0xc4c70 0x12a570 0x9eb10 0x104410 0x9eb10 0xeadd0 0x0 0xce4c8 0x0 0xb8150 0x0 0x9eb10 0x0 0x7bc78 0x0 0x5c0a8 0x0>;
+					table = <0x249f00 0x13d620 0x234f10 0x13d620 0x21b8d0 0x11a788 0x202290 0x11a788 0x1e8c50 0x101148 0x1cf610 0x101148 0x1b5fd0 0xe7b08 0x19c990 0xe7b08 0x183350 0xc4c70 0x1702a0 0xc4c70 0x156c60 0xc4c70 0x12a570 0x9eb10 0x104410 0x9eb10 0xeadd0 0x0 0xce4c8 0x0 0xb8150 0x0 0x9eb10 0x0 0x7bc78 0x0 0x5c0a8 0x0>;
 				};
 			};
 		};
@@ -9949,7 +9949,7 @@
 			dm-type = <0x2>;
 			need-awake;
 			max-freq = <0x2e0540>;
-			min-freq = <0x493e0>;
+			min-freq = <0x7ef40>;
 			pm_qos-min-class = <0x7>;
 			pm_qos-max-class = <0x8>;
 			pm_qos-booting = <0x1fbd00>;
@@ -9962,7 +9962,7 @@
 				mif-perf {
 					const-type = <0x0>;
 					dm-type = <0x3>;
-					table = <0x2e0540 0x2c6f00 0x2ad8c0 0x2e0540 0x1fefc8 0x2c6f00 0x1fefc8 0x2ad8c0 0x1fefc8 0x29a810 0x1fefc8 0x27ac40 0x1fefc8 0x269ad0 0x1fefc8 0x25b070 0x1fefc8  0x23b4a0 0x1fefc8 0x221e60 0x1fefc8 0x1fbd00 0x0 0x1e26c0 0x0 0x1bc560 0x0 0x196400 0x0 0x17cdc0 0x0 0x163780 0x0 0x1506d0 0x0 0x130b00 0x0 0x1174c0 0x0 0xfde80 0x0 0xe4840 0x0 0xc7f38  0x0 0xb1bc0 0x0 0x98580 0x0 0x7ef40 0x0 0x493e0 0x0>;
+					table = <0x2e0540 0x2c6f00 0x2ad8c0 0x2e0540 0x1fefc8 0x2c6f00 0x1fefc8 0x2ad8c0 0x1fefc8 0x29a810 0x1fefc8 0x27ac40 0x1fefc8 0x269ad0 0x1fefc8 0x25b070 0x1fefc8  0x23b4a0 0x1fefc8 0x221e60 0x1fefc8 0x1fbd00 0x0 0x1e26c0 0x0 0x1bc560 0x0 0x196400 0x0 0x17cdc0 0x0 0x163780 0x0 0x1506d0 0x0 0x130b00 0x0 0x1174c0 0x0 0xfde80 0x0 0xe4840 0x0 0xc7f38  0x0 0xb1bc0 0x0 0x98580 0x0 0x7ef40 0x0>;
 				};
 
 				mif-skew {
